chore: move the whole code to internal directory
