# internal/infrastructure/echo.go
@@ -1,0 +1,5 @@
+package infrastructure
+
+type ErrorResponse struct {
+	Message string `json:"message"`
+}
